# SEM-SZZ

./: README.md  readme.md
cids_with_dels/: gen_baseline_results_for_deletes.py  gen_results_for_deletes.py
cids_without_dels/: aSZZ.py  ablation.py  dissN.py  gen_baseline_results_for_no_deletes.py  gen_results_for_no_deletes.py  settings.py
cids_without_dels/dataset/: dataset1_cid_info.json  dataset2_cid_info.json
cids_without_dels/result/1/0077a50082729c3f9ea2836f59e35d9b7dacfb12/: path_result.json
cids_without_dels/result/1/007a74907deeceefef9dc3ec4679fbd7921eaa51/: result.json
cids_without_dels/result/1/008369dcc5f7bfba526c98054f8525322acf0ea3/: path_result.json
cids_without_dels/result/1/008cfbaa3f9f84efead76d2cea12b4dd05cce67d/: path_result.json  result.json
cids_without_dels/result/1/009ad9f0c6eed0caa7943bc46aa1ae2cb8c382fb/: result.json
cids_without_dels/result/1/00ae40e71d85ea3fed1b906951ffd80e0321a96d/: path_result.json
cids_without_dels/result/1/00b7a4d4ee42be1c515e56cb1e8ba0f25e271d8e/: path_result.json
clang-tools-extra/aszz-bin/: CMakeLists.txt  aszz.cpp
clang-tools-extra/gen-info/: CMakeLists.txt  GenInfo.cpp
clang-tools-extra/gen-line-result/: CMakeLists.txt  genLineResult.cpp
clang-tools-extra/gen-result/: BlockInfoGenerator.cpp  BlockInfoGenerator.h  BlockMapper.cpp  BlockMapper.h  CMakeLists.txt  GenResult.cpp  PathComparator.cpp  PathComparator.h  PathGenerator.cpp  PathGenerator.h  StateCollector.cpp  StateCollector.h  constraint.cpp  constraint.h  identifierTable.cpp  identifierTable.h
(+13226 files in other folders)
